convert score to number

--- a/app/data/equipment/211_liquid-fertiliser-applicator-3m.json
+++ b/app/data/equipment/211_liquid-fertiliser-applicator-3m.json
@@ -8,7 +8,7 @@
   "grantValue": "8,880.00",
   "grantPercentage": "60",
   "averageValue": "14,800.00",
-  "score": "66",
+  "score": 66,
   "serialNumber": "yes",
   "eligible": {
     "eligibleBullet01": "be a liquid fertiliser applicator for seed drills",
