--- a/app/data/equipment/212_liquid-fertiliser-applicator-6m.json
+++ b/app/data/equipment/212_liquid-fertiliser-applicator-6m.json
@@ -8,7 +8,7 @@
   "grantValue": "11,031.00",
   "grantPercentage": "60",
   "averageValue": "18,385.00",
-  "score": "71",
+  "score": 71,
   "serialNumber": "yes",
   "eligible": {
     "eligibleBullet01": "be a liquid fertiliser applicator for seed drills",
