--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "dependencies": {
     "@govuk-prototype-kit/common-templates": "2.0.1",
     "@govuk-prototype-kit/task-list": "2.0.0",
-    "@x-govuk/govuk-prototype-filters": "^1.3.1",
-    "govuk-frontend": "5.1.0",
-    "govuk-prototype-kit": "13.16.0",
-    "underscore": "^1.13.6"
+    "@x-govuk/govuk-prototype-filters": "^1.4.1",
+    "govuk-frontend": "5.6.0",
+    "govuk-prototype-kit": "13.16.2",
+    "underscore": "^1.13.7",
+    "@ministryofjustice/frontend": "^2.2.0"
   }
 }
